--- a/index.html
+++ b/index.html
@@ -11,11 +11,30 @@
 </head>
 
 <body>
+    <div id="container">
+        <div id="navbar">
+            <div class="navbar-list">
+                <ul>
+                    <li>
+                        <a href="#"></a> Home </li>
+                    <li>
+                        <a href="#"></a> About </li>
+                    <li>
+                        <a href="#"></a> Series </li>
+                    <li>
+                        <a href="#"></a> Watch Online </li>
+                </ul>
 
-    <div id="navbar"></div>
-    <div id="section"></div>
-    <div id="footer"></div>
+            </div>
+            <div class="navbar-content">
+                <h3> Buy Now </h3>
+            </div>
+        </div>
 
+
+        <div id="section"></div>
+        <div id="footer"></div>
+    </div>
 </body>
 
 </html>
