--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Game of Thrones Cover </title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-
+    <link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700,900' rel='stylesheet' type='text/css' href="css/main.css">
 
 </head>
 
@@ -16,13 +16,13 @@
             <div class="navbar-list">
                 <ul>
                     <li>
-                        <a href="#"></a> Home </li>
+                        <a href="index.html"> Home </a></li>
                     <li>
-                        <a href="#"></a> About </li>
+                        <a href="#">About</a> </li>
                     <li>
-                        <a href="#"></a> Series </li>
+                        <a href="#"> Series</a> </li>
                     <li>
-                        <a href="#"></a> Watch Online </li>
+                        <a href="#">Watch Online</a> </li>
                 </ul>
 
             </div>
