Inserting image and heading in the main section part

--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
         </div>
 
 
-        <div id="section"></div>
+        <div id="section">
+            <figure class="image">
+                <img src="img/CUghf-tWsAQ5ftS.0.0.jpg_large">
+            </figure>
+            <div class="image_content">
+
+                <h2> Game of <br/> Thrones </h2>
+                <h3> Jon Snow's <span>Awakening</span></h3>
+            </div>
+
+
+        </div>
         <div id="footer"></div>
     </div>
 </body>
