--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
 
 
         <div id="section">
-            <figure class="image">
-                <img src="img/CUghf-tWsAQ5ftS.0.0.jpg_large">
-            </figure>
-            <div class="image_content">
+            <div class="image">
+                <img src="img/CUghf-tWsAQ5ftS.0.0.jpg_large" alt="">
 
                 <h2> Game of <br/> Thrones </h2>
                 <h3> Jon Snow's <span>Awakening</span></h3>
