Adding footer contents

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
                 <img src="img/CUghf-tWsAQ5ftS.0.0.jpg_large" alt="">
 
                 <h2> Game of <br/> Thrones </h2>
-                <h3> Jon Snow's <span>Awakening</span></h3>
+                <span> <h3> Jon Snow's <br/>Awakening</h3></span>
             </div>
 
 
         </div>
-        <div id="footer"></div>
+        <div id="footer">
+        <p> Copyright 2016</p>
+        </div>
     </div>
 </body>
 
