Adding a drop down menu in Series and About tags in the navbar

--- a/index.html
+++ b/index.html
@@ -18,9 +18,30 @@
                     <li>
                         <a href="index.html"> Home </a></li>
                     <li>
-                        <a href="#">About</a> </li>
+                        <a href="#">About</a>
+                        <ul>
+                            <li><a href="#" title="Sub Nav Link1">Sub Nav Link1 </a></li>
+                            <li> <a href="#" title="Sub Nav Link2">Sub Nav Link2</a></li>
+                            <li> <a href="#" title="Sub Nav Link3">Sub Nav Link3</a></li>
+
+                        </ul>
+
+                    </li>
                     <li>
-                        <a href="#"> Series</a> </li>
+                        <a href="#"> Series</a>
+
+
+                        <ul>
+                            <li><a href="#" title="Sub Nav Link1">Sub Nav Link1 </a></li>
+                            <li> <a href="#" title="Sub Nav Link2">Sub Nav Link2</a></li>
+                            <li> <a href="#" title="Sub Nav Link3">Sub Nav Link3</a></li>
+                            <li><a href="#" title="Sub Nav Link1">Sub Nav Link4 </a></li>
+                            <li> <a href="#" title="Sub Nav Link2">Sub Nav Link5</a></li>
+                            <li> <a href="#" title="Sub Nav Link3">Sub Nav Link6</a></li>
+
+                        </ul>
+
+                    </li>
                     <li>
                         <a href="#">Watch Online</a> </li>
                 </ul>
@@ -43,9 +64,11 @@
 
         </div>
         <div id="footer">
-        <p> Copyright 2016</p>
+            <p> Copyright 2016</p>
         </div>
     </div>
+    <script src="js/jquery.js"></script>
+    <script src="js/modernizer.j"></script>
 </body>
 
 </html>
