--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <ul>
                             <li><a href="#" title="Sub Nav Link1">Sub Nav Link1 </a></li>
                             <li> <a href="#" title="Sub Nav Link2">Sub Nav Link2</a></li>
-                            <li> <a href="#" title="Sub Nav Link3">Sub Nav Link3</a></li>
+                            <li class="last"> <a href="#" title="Sub Nav Link3">Sub Nav Link3</a></li>
 
                         </ul>
 
@@ -35,9 +35,9 @@
                             <li><a href="#" title="Sub Nav Link1">Sub Nav Link1 </a></li>
                             <li> <a href="#" title="Sub Nav Link2">Sub Nav Link2</a></li>
                             <li> <a href="#" title="Sub Nav Link3">Sub Nav Link3</a></li>
-                            <li><a href="#" title="Sub Nav Link1">Sub Nav Link4 </a></li>
-                            <li> <a href="#" title="Sub Nav Link2">Sub Nav Link5</a></li>
-                            <li> <a href="#" title="Sub Nav Link3">Sub Nav Link6</a></li>
+                            <li><a href="#" title="Sub Nav Link4">Sub Nav Link4</a></li>
+                            <li> <a href="#" title="Sub Nav Link5">Sub Nav Link5</a></li>
+                            <li> <a href="#" title="Sub Nav Link6">Sub Nav Link6</a></li>
 
                         </ul>
 
