--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <li>
                         <a href="#">About</a>
                         <ul>
-                            <li><a href="#" title="Sub Nav Link1">Sub Nav Link1 </a></li>
-                            <li> <a href="#" title="Sub Nav Link2">Sub Nav Link2</a></li>
-                            <li class="last"> <a href="#" title="Sub Nav Link3">Sub Nav Link3</a></li>
+                            <li><a href="#" title="Sub Nav Link1">The Script </a></li>
+                            <li> <a href="#" title="Sub Nav Link2">Cast</a></li>
+                            <li class="last"> <a href="#" title="Sub Nav Link3"> HBO </a></li>
 
                         </ul>
 
@@ -32,12 +32,12 @@
 
 
                         <ul>
-                            <li><a href="#" title="Sub Nav Link1">Sub Nav Link1 </a></li>
-                            <li> <a href="#" title="Sub Nav Link2">Sub Nav Link2</a></li>
-                            <li> <a href="#" title="Sub Nav Link3">Sub Nav Link3</a></li>
-                            <li><a href="#" title="Sub Nav Link4">Sub Nav Link4</a></li>
-                            <li> <a href="#" title="Sub Nav Link5">Sub Nav Link5</a></li>
-                            <li> <a href="#" title="Sub Nav Link6">Sub Nav Link6</a></li>
+                            <li><a href="#" title="Sub Nav Link1">Season 1</a></li>
+                            <li> <a href="#" title="Sub Nav Link2">Season 2</a></li>
+                            <li> <a href="#" title="Sub Nav Link3">Season 3</a></li>
+                            <li><a href="#" title="Sub Nav Link4">Season 4</a></li>
+                            <li> <a href="#" title="Sub Nav Link5">Season 5</a></li>
+                            <li> <a href="#" title="Sub Nav Link6">Season 6</a></li>
 
                         </ul>
 
