--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 
 
         <div id="section">
-            <div class="image">
-                <img src="img/CUghf-tWsAQ5ftS.0.0.jpg_large" alt="">
 
-                <h2> Game of <br/> Thrones </h2>
-                <span> <h3> Jon Snow's <br/>Awakening</h3></span>
-            </div>
+            <img src="img/CUghf-tWsAQ5ftS.0.0.jpg_large" />
 
-
+            <h2> Game of <br/> Thrones </h2>
+            <span> <h3> Jon Snow's <br/>Awakening</h3></span>
         </div>
+
+
+
         <div id="footer">
             <p> Copyright 2016</p>
         </div>
